--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 body {
-	font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+	font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji,
+		Segoe UI Emoji;
 }
